Finished implementing GitHub oAuth API and wrote code for saving cookies

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GITHUB_CLIENT_ID="Iv1.2a8896ddd1345433"
 GITHUB_CLIENT_SECRET="780ba7d89830ec661bebcb1238a2950280ee8d6e"
+COOKIE_SECRET="itsnanotechyoulikeit"
